# ChainTrace

./: .env.example  .gitignore  README.md  chain_trace_prd.md  pyproject.toml
chaintrace/: __init__.py  aggregator.py  cache.py  cli.py  gemini.py  models.py  scraper.py  search.py  validator.py
tests/: __init__.py  test_cache.py  test_gemini.py  test_scraper.py  test_search.py  test_validator.py
