[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaintrace"
version = "0.1.0"
description = "CLI tool for hardware component identification and supply-chain risk analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "google-generativeai>=0.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
chaintrace = "chaintrace.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chaintrace*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
